Fix decor alignment on desktop

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -91,11 +91,11 @@
 }
 
 .albums > :first-child {
-  padding-left: 24px;
+  padding-left: 20px;
 }
 
 .albums > :last-child {
-  padding-right: 24px;
+  padding-right: 20px;
 }
 
 .albums > div {
@@ -103,7 +103,7 @@
 }
 
 .singles {
-  margin-left: 24px;
+  margin-left: 20px;
   margin-top: 20px;
 }
 
@@ -114,7 +114,8 @@
 }
 
 .singles_list {
-  width: 340px;
+  /* width: 340px; */
+  margin-right: 14px;
   display: flex;
   flex-direction: column;
   row-gap: 14px;
